syntax = "proto3";
package products;

import "proto/meta.proto";

option go_package = "gen/";

message Product {
    string id = 1;
    string name = 2;
    float price = 3;
    
    meta.Extra meta = 4;
}

message ProductParams {
    string id = 1;
}

message ProductRequest {
    optional int32 limit = 1;
    optional int32 offset = 2;
}

message ProductResponse {
    repeated Product products = 1;
}


service ProductService {
    rpc GetByID (ProductParams) returns (Product);
    rpc GetByParams (ProductRequest) returns (ProductResponse);
    rpc Create(Product) returns (Product);
}